Fixing Next page link in Creating-change.html

--- a/Creating-Change.html
+++ b/Creating-Change.html
@@ -191,9 +191,9 @@
 <!-- ======= Next Page / Start ========== -->
 <section>
 <div class="col-lg-12 text-center">
-    <a class="next-link" href="work-1.html">
+    <a class="next-link" href="Biodiversity-Festival.html">
         <div class="nav-title">Next Work</div>
-        <div class="next-title">Ural Voyage</div>
+        <div class="next-title">Biodiversity Festival</div>
     </a>
 </div>
 </section>
@@ -204,18 +204,16 @@
     <div class="row">  
       <div class="social-icons col-lg-8 offset-lg-2 bottom_45">
           <div class="social top_15 bottom_45">
-              <a href="#"><i class="fab fa-facebook-f"></i></a>
-              <a href="#"><i class="fab fa-twitter" aria-hidden="true"></i>  </a>
-              <a href="#"><i class="fab fa-behance" aria-hidden="true"></i>  </a>
-              <a href="#"><i class="fab fa-dribbble" aria-hidden="true"></i>  </a>
-              <a href="#"><i class="fab fa-instagram" aria-hidden="true"></i>  </a>
+              <a href="https://www.pinterest.com/peterveras/"><i class="fab fa-pinterest" aria-hidden="true"></i>  </a>
+              <a href="https://www.behance.net/peterveras"><i class="fab fa-behance" aria-hidden="true"></i>  </a>
+              <a href="https://dribbble.com/PeterVeras"><i class="fab fa-dribbble" aria-hidden="true"></i>  </a>
+              <a href="https://www.instagram.com/peter_verastegui/"><i class="fab fa-instagram" aria-hidden="true"></i>  </a>
           </div>
         </div>
     </div>
     <div class="row">
       <div class="col-lg-12">
-        <p>Say hello at <a href="mailto:soonlabs@soonlabs.com">soonlabs@soonlabs.com</a></p>
-        <p class="copyright">2019 © Wender Template. Design by <a href="http://www.soonlabs.com">Soonlabs.</a></p>
+        <p class="copyright">© Edwin Peter Verastegui Guasace</p>
       </div>
     </div>
   </div>
