--- a/index.html
+++ b/index.html
@@ -136,12 +136,12 @@
       </div>
         <div class="image padbot_45 grid-item photography wow fadeInUp" data-wow-delay="0.6s"  data-type="ajax-load">
           <a href="Storytelling-Bootcamp.html">
-        <img class="round-corners"src="img/works/work-4/Storytelling-Bootcamp-thumbnail.png" alt="">
+        <img class="round-corners"src="img/works/work-4/Storytelling-Bootcamp-thumbnail.png" alt="Woman diving photo by Dave McAloney">
           </a>
       </div>
       <div class="image padbot_45 grid-item photography wow fadeInUp" data-wow-delay="0.6s"  data-type="ajax-load">
           <a href="Biodiversity-Festival.html">
-        <img class="round-corners"src="img/works/work-6/Cover_Bioblitz-2.png" alt="">
+        <img class="round-corners"src="img/works/work-6/bat-flying-thumbnail.gif" alt="Bat Flying Animation">
           </a>
       </div>
     </div>
@@ -149,7 +149,7 @@
       <div class="col-lg-4">
       <div class="image padbot_45 grid-item photography wow fadeInUp" data-wow-delay="0.6s"  data-type="ajax-load">
           <a href="work-1.html">
-        <img class="round-corners" src="img/works/work- 1/work-1-Thumb.png" alt="">
+        <img class="round-corners" src="img/works/Galaxy/Galaxy-Thumb.png" alt="">
           </a>
       </div>
     </div>    
