--- a/Gallo-Guapo.html
+++ b/Gallo-Guapo.html
@@ -112,7 +112,7 @@
       <!-- a image -->
         <div class="col-lg-12">
           <div class="image">
-            <img src="img/works/work-5/Wall-Gallo-Guapo-Restaurant.jpg" alt="">
+            <img src="img/works/work-5/Wall-Gallo-Guapo-Restaurant.jpg" alt="Restaurant Branding">
           </div>
         </div>
         <!-- a image -->
@@ -120,19 +120,19 @@
       <!-- a image -->
     <div class="col-lg-6">
       <div class="image">
-        <img src="img/works/work-5/Poster-Gallo-Guapo-Restaurant-1.jpg" alt="">
+        <img src="img/works/work-5/Poster-Gallo-Guapo-Restaurant-1.jpg" alt="Poster Design">
       </div>
     </div>
     <div class="col-lg-6">
       <div class="image">
-        <img src="img/works/work-5/Stationary-Group-Restaurant-Gallo-Guapo.jpg" alt="">
+        <img src="img/works/work-5/Stationary-Group-Restaurant-Gallo-Guapo.jpg" alt="Branding on stationary">
       </div>
     </div>
       
           <!-- a image -->
     <div class="col-lg-12">
       <div class="image">
-        <img src="img/works/work-5/LOGO-Signature-Gallo-Guapo-Restaurant.jpg" alt="">
+        <img src="img/works/work-5/LOGO-Signature-Gallo-Guapo-Restaurant.jpg" alt="Logo">
       </div>
     </div>
     <!-- a image --> 
@@ -140,7 +140,7 @@
           <!-- a image -->
     <div class="col-lg-6">
       <div class="image">
-        <img src="img/works/work-5/Apron-Restaurant-Gallo-Guapo-1.jpg" alt="">
+        <img src="img/works/work-5/Apron-Restaurant-Gallo-Guapo-1.jpg" alt="Apron Branding">
       </div>
     </div>
     <!-- a image -->
@@ -149,7 +149,7 @@
       <!-- a image -->
     <div class="col-lg-6">
       <div class="image">
-        <img src="img/works/work-5/Poster-Gallo-Guapo-Restaurant-2.jpg" alt="">
+        <img src="img/works/work-5/Poster-Gallo-Guapo-Restaurant-2.jpg" alt="Poster Design">
       </div>
     </div>
     
@@ -159,18 +159,18 @@
     <!-- a image -->
     <div class="col-lg-12">
       <div class="image">
-        <img src="img/works/work-5/Wall-Design-Illustration-Restaurant.jpg" alt="">
+        <img src="img/works/work-5/Wall-Design-Illustration-Restaurant.jpg" alt="Illustration">
       </div>
     </div>
     <!-- a image -->
 <div class="col-lg-12">
       <div class="image">
-        <img src="img/works/work-5/Foodtruck-Back-GalloGuapo.jpg" alt="">
+        <img src="img/works/work-5/Foodtruck-Back-GalloGuapo.jpg" alt="Food truck branding">
       </div>
 </div>
 <div class="col-lg-12">
   <div class="image">
-    <img src="img/works/work-5/Stationary-restaurant-gallo-guapo.jpg" alt="">
+    <img src="img/works/work-5/Stationary-restaurant-gallo-guapo.jpg" alt="All branded items">
   </div>
 </div>
     <!-- a image -->
