--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
       
       <div class="col-lg-4">
       <div class="image padbot_45 grid-item photography wow fadeInUp" data-wow-delay="0.6s"  data-type="ajax-load">
-          <a href="work-1.html">
+          <a href="Galaxy.html">
         <img class="round-corners" src="img/works/Galaxy/Galaxy-Thumb.png" alt="">
           </a>
       </div>
