--- a/Galaxy.html
+++ b/Galaxy.html
@@ -86,7 +86,7 @@
 
 <!-- Hero Section
 ================================================== -->
-<div class="hero"  data-midnight="dark">
+<div class="hero galaxy-bg"  data-midnight="dark">
   <div class="hero-content">
       <div class="inner">
           <h1 class="title">Galaxy</h1>
@@ -94,7 +94,7 @@
       </div>
   </div>
    <!-- Down Icon -->
-    <div class="down-icon white dark galaxy-bg" data-wow-delay="1.7s">
+    <div class="down-icon white dark" data-wow-delay="1.7s">
         <svg width="26px" height="100%" viewBox="0 0 247 390" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:1.5;">
             <path id="wheel" d="M123.359,79.775l0,72.843" style="fill:none;stroke:#fff;stroke-width:20px;"/>
             <path id="mouse" d="M236.717,123.359c0,-62.565 -50.794,-113.359 -113.358,-113.359c-62.565,0 -113.359,50.794 -113.359,113.359l0,143.237c0,62.565 50.794,113.359 113.359,113.359c62.564,0 113.358,-50.794 113.358,-113.359l0,-143.237Z" style="fill:none;stroke:#fff;stroke-width:20px;"/>
@@ -106,7 +106,7 @@
 
 <!-- Work Content
 ================================================== -->
-<section  data-midnight="dark" class="padding_10 dark galaxy-bg">
+<section  data-midnight="dark" class="padding_10 dark">
   <div class="container project-detail">
     <h2 class="title bottom_30">The Problem</h2>
     <p>The "Men in Black" like any other person on earth also do tedious office work, for such operations they use Galaxy, an ancient system that once did everything; from looking for the bad guys to helping agents requesting new guns, steplers, and even pens. The once highly funded agency is a shodow of itself 10 years have past and no updates has been made to this system since 2010. Fortunately 2020 has brought new funding and the IT department has been tasked to updated this system.</p>
@@ -125,7 +125,7 @@
                 <!-- a image -->
                 <div class="col-lg-12">
                     <div class="image">
-                        <img src="img/works/work-1/Colors-National-Market.png" alt="Colors">
+                        <img src="img/works/Galaxy/Resource-Request-Workflow.png" alt="Request Worflow">
                     </div>
                 </div>
             </div>
@@ -134,23 +134,46 @@
 </section>
 <!-- One Column - centered image | End  -->
 
-<!-- One Column - centered image | Start  -->
-<section class="galaxy-bg">
-                <div class="project-detail">
-                    <div class="container">
-                        <!-- Images -->
-                        <div class="row lightbox-gallery">
-                            <!-- a image -->
-                            <div class="col-lg-12">
-                                <div class="image">
-                                    <img src="img/works/Galaxy/Resource-Request-Workflow.png" alt="Request Worflow">
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+<!-- Three Columns - Text & Image | Start  -->
+<section  data-midnight="dark" class="dark galaxy-bg">
+<div class="project-detail">
+        <div class="row">
+            <div class="col-lg-12">
+            <h3 class="text subtitle text-center">Users</h3>
+            <p class="text-center padbot_30">City maps, geometric shapes, and new colors</p>
+        </div>
+        </div>
+</div>
+
+    <div class="container project-detail">
+      <div class="row">
+          <div class="col-lg-4">
+            <div class="image">
+                <img src="img/works/Galaxy/Users/Noisy Cricket.png" alt="Assignee Agent J">
+            </div>
+            <h2 class="title bottom_30">Assigned Agent</h2>
+              <p>In the field things can get tragic pretty quickly. Some people above me would pay to go back into the field and feel the adrenaline of riskyng one's life. The flying cars and the guns are nothing in comparison to that awful feeling of having your stomach drop to the ground everytime one knocks at a stranger's door. This job feels like a bless and a curse.</p>
+          </div>
+          <div class="col-lg-4">
+            <div class="image">
+                <img src="img/works/Galaxy/Users/Supervisor.png" alt="Agent G/Supersivor">
+            </div>
+              <h2 class="title bottom_30">Supervisor</h2>
+                <p>My peeps on the field are putting their life on the line, and as their supervisor I feel like they have trusted me with their life, so I'll do whatever is on my power to get them, whatever they need to get, safely. If they return home in once piece I did my job. If keeping them safe cost us some money so be it.</p>
+          </div>
+          <div class="col-lg-4">
+            <div class="image">
+                <img src="img/works/Galaxy/Users/CFO.png" alt="Chief/CFO">
+            </div> 
+            <h2 class="title bottom_30">CFO</h2>
+              <p>I am the money guy, in my eyes some people in the field think every assigment a Michael Bey movie. If they do that everytime they go out I got a problem. Do they think we have an infinite suply of money?, the thing is that if I burn the fiscal budget before the end of the year–I get in trouble not them!</p>
+        </div>        
+    </div>
+  </div>  
 </section>
-<!-- One Column - centered image | End  -->
+
+<!-- Three Columns - Text & Image | End  -->
+
 
 <section>
     <div class="col-lg-12 text-center top_60">
