--- a/Gallo-Guapo.html
+++ b/Gallo-Guapo.html
@@ -31,7 +31,7 @@
 
 <!-- Preloader -->
 <div id="preloader">
-<svg width="60px"  height="60px" viewBox="0 0 100 100"><path fill="none" d="M24.3,30C11.4,30,5,43.3,5,50s6.4,20,19.3,20c19.3,0,32.1-40,51.4-40 C88.6,30,95,43.3,95,50s-6.4,20-19.3,20C56.4,70,43.6,30,24.3,30z" stroke="#fff" stroke-width="6" stroke-dasharray="205.271142578125 51.317785644531256"><animate attributeName="stroke-dashoffset" calcMode="linear" values="0;256.58892822265625" keyTimes="0;1" dur="1.5" begin="0s" repeatCount="indefinite"></animate></path></svg>
+<svg width="60px"  height="60px" viewBox="0 0 100 100"><path fill="none" d="M24.3,30C11.4,30,5,43.3,5,50s6.4,20,19.3,20c19.3,0,32.1-40,51.4-40 C88.6,30,95,43.3,95,50s-6.4,20-19.3,20C56.4,70,43.6,30,24.3,30z" stroke="#F2F2F2" stroke-width="6" stroke-dasharray="205.271142578125 51.317785644531256"><animate attributeName="stroke-dashoffset" calcMode="linear" values="0;256.58892822265625" keyTimes="0;1" dur="1.5" begin="0s" repeatCount="indefinite"></animate></path></svg>
 </div> 
 
 <main>
@@ -95,8 +95,8 @@
             <!-- Down Icon -->
             <div class="down-icon white" data-wow-delay="1.7s">
                 <svg width="26px" height="100%" viewBox="0 0 247 390" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:1.5;">
-                    <path id="wheel" d="M123.359,79.775l0,72.843" style="fill:none;stroke:#fff;stroke-width:20px;" />
-                    <path id="mouse" d="M236.717,123.359c0,-62.565 -50.794,-113.359 -113.358,-113.359c-62.565,0 -113.359,50.794 -113.359,113.359l0,143.237c0,62.565 50.794,113.359 113.359,113.359c62.564,0 113.358,-50.794 113.358,-113.359l0,-143.237Z" style="fill:none;stroke:#fff;stroke-width:20px;" />
+                    <path id="wheel" d="M123.359,79.775l0,72.843" style="fill:none;stroke:#F2F2F2;stroke-width:20px;" />
+                    <path id="mouse" d="M236.717,123.359c0,-62.565 -50.794,-113.359 -113.358,-113.359c-62.565,0 -113.359,50.794 -113.359,113.359l0,143.237c0,62.565 50.794,113.359 113.359,113.359c62.564,0 113.358,-50.794 113.358,-113.359l0,-143.237Z" style="fill:none;stroke:#F2F2F2;stroke-width:20px;" />
                 </svg>
             </div>
             <div class="hero-image" style="background-image: url(img/works/work-5/Gallo-Guapo-Cover.png);"></div>
