--- a/Galaxy.html
+++ b/Galaxy.html
@@ -106,10 +106,10 @@
 
 <!-- Work Content
 ================================================== -->
-<section  data-midnight="dark" class="padding_10 dark">
+<section  data-midnight="dark" class="galaxy-bg-purple-gradient">
   <div class="container project-detail">
-    <h2 class="title bottom_30">The Problem</h2>
-    <p>The "Men in Black" like any other person on earth also do tedious office work, for such operations they use Galaxy, an ancient system that once did everything; from looking for the bad guys to helping agents requesting new guns, steplers, and even pens. The once highly funded agency is a shodow of itself 10 years have past and no updates has been made to this system since 2010. Fortunately 2020 has brought new funding and the IT department has been tasked to updated this system.</p>
+    <h2 class="title bottom_30 white-text">The Problem</h2>
+    <p class="white-text">The "Men in Black" like any other person on earth also do tedious office work, for such operations they use Galaxy, an ancient system that once did everything; from looking for the bad guys to helping agents requesting new guns, steplers, and even pens. The once highly funded agency is a shodow of itself 10 years have past and no updates has been made to this system since 2010. Fortunately 2020 has brought new funding and the IT department has been tasked to updated this system.</p>
   </div>
   </section>    
 </section>
@@ -139,7 +139,7 @@
 <div class="project-detail">
         <div class="row">
             <div class="col-lg-12">
-            <h3 class="text subtitle text-center">Users</h3>
+            <h2 class="text title text-center">Users</h2>
             <p class="text-center padbot_30">City maps, geometric shapes, and new colors</p>
         </div>
         </div>
@@ -151,8 +151,8 @@
             <div class="image">
                 <img src="img/works/Galaxy/Users/Noisy Cricket.png" alt="Assignee Agent J">
             </div>
-            <h2 class="title bottom_30">Assigned Agent</h2>
-              <p>In the field things can get tragic pretty quickly. Some people above me would pay to go back into the field and feel the adrenaline of riskyng one's life. The flying cars and the guns are nothing in comparison to that awful feeling of having your stomach drop to the ground everytime one knocks at a stranger's door. This job feels like a bless and a curse.</p>
+            <h2 class="title bottom_30">Assignee</h2>
+              <p>In the field things can get tragic pretty quickly. Some people above me would pay to go back into the field and feel the adrenaline of riskyng one's life. The flying cars and the guns are nothing in comparison to that awful feeling of having your stomach drop to the ground everytime one knocks at a stranger's door.</p>
           </div>
           <div class="col-lg-4">
             <div class="image">
