--- a/USA-Today.html
+++ b/USA-Today.html
@@ -187,11 +187,11 @@
                             <!-- a image -->
                           <div class="video col-lg-6 bottom_15 top_60 bottom_60">
                                 <h3 class="subtitle bottom_30 white-text">Local</h3>
-                            <div style="padding:100% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/218794570?title=0&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
+                            <div style="padding:100% 0 0 0;position:relative;"><iframe class="round-corners" src="https://player.vimeo.com/video/218794570?title=0&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
                           </div>
                           <div class="col-lg-6 bottom_15 top_60 bottom_60">
                                 <h3 class="subtitle bottom_30 white-text">National</h3>
-                            <div style="padding:100% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/218702874?title=0&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
+                            <div style="padding:100% 0 0 0;position:relative;"><iframe class="round-corners" src="https://player.vimeo.com/video/218702874?title=0&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
                           </div>
                         </div>
                     </div>    
@@ -206,16 +206,16 @@
                     <!-- project-detail Two Columns | Start -->
                         <div class="row no-gutter">
                             <div class="image col-lg-3 bottom_15">
-                                <img src="img/works/work-1/USATODAY-National-Intro-1080x1080-Opener.jpg" alt="New elements">
+                                <img class="round-corners" src="img/works/work-1/USATODAY-National-Intro-1080x1080-Opener.jpg" alt="New elements">
                             </div>
                             <div class="image col-lg-3 bottom_15">
-                                <img src="img/works/work-1/USATODAY-National-Name-Title-1080x1080.jpg" alt="New elements">
+                                <img class="round-corners" src="img/works/work-1/USATODAY-National-Name-Title-1080x1080.jpg" alt="New elements">
                             </div>
                               <div class="image col-lg-3 bottom_15">
-                                <img  src="img/works/work-1/USATODAY-National-Audio-1080x1080.jpg" alt="New elements">
+                                <img class="round-corners" src="img/works/work-1/USATODAY-National-Audio-1080x1080.jpg" alt="New elements">
                             </div>
                             <div class="image col-lg-3">
-                                <img src="img/works/work-1/USATODAY-National-Text-Boxes-1080x1080.jpg" alt="New elements">
+                                <img class="round-corners" src="img/works/work-1/USATODAY-National-Text-Boxes-1080x1080.jpg" alt="New elements">
                             </div>
                         </div>
                     <!-- project-detail Two Columns | End -->
@@ -223,16 +223,16 @@
                         <!-- project-detail Two Columns | Start -->
                         <div class="row no-gutter top_15">
                             <div class="image col-lg-3 bottom_15">
-                                <img src="img/works/work-1/USATODAY-Local-Intro-1080x1080.png" alt="New elements">
+                                <img class="round-corners" src="img/works/work-1/USATODAY-Local-Intro-1080x1080.png" alt="New elements">
                             </div>
                             <div class="image col-lg-3 bottom_15">
-                                <img src="img/works/work-1/USATODAY-Local-Outroa-1080x1080.png" alt="New elements">
+                                <img class="round-corners" src="img/works/work-1/USATODAY-Local-Outroa-1080x1080.png" alt="New elements">
                             </div>
                               <div class="image col-lg-3 bottom_15">
-                                <img  src="img/works/work-1/USATODAY-National-Outro-1080x10800-2.png" alt="New elements">
+                                <img class="round-corners" src="img/works/work-1/USATODAY-National-Outro-1080x10800-2.png" alt="New elements">
                             </div>
                             <div class="image col-lg-3">
-                                <img  src="img/works/work-1/USATODAY-Local-NameTitle-1080x10802.jpg" alt="New elements">
+                                <img class="round-corners" src="img/works/work-1/USATODAY-Local-NameTitle-1080x10802.jpg" alt="New elements">
                             </div>
                         </div>
                     <!-- project-detail Two Columns | End -->
@@ -281,13 +281,13 @@
                     <!-- Three colums - one row | Start -->
                         <div class="row no-gutter">
                             <div class="image col-lg-4 bottom_15">
-                                <img src="img/works/work-1/Outro-options-2.gif" alt="New elements">
+                                <img class="round-corners" src="img/works/work-1/Outro-options-2.gif" alt="New elements">
                             </div>
                             <div class="image col-lg-4 bottom_15">
-                                <img src="img/works/work-1/Outro-option-5.gif" alt="New elements">
+                                <img class="round-corners" src="img/works/work-1/Outro-option-5.gif" alt="New elements">
                             </div>
                               <div class="image col-lg-4 bottom_15">
-                                <img src="img/works/work-1/Outro-option-3.gif" alt="New elements">
+                                <img class="round-corners" src="img/works/work-1/Outro-option-3.gif" alt="New elements">
                             </div>
                         </div>
         </div>   
