--- a/Racing-Extinction.html
+++ b/Racing-Extinction.html
@@ -135,25 +135,25 @@
                     <!-- a image -->
                     <div class="col-lg-12 bottom_60">
                         <div class="image">
-                            <img src="img/works/work-3/Paradise-Flycatcher-1.png" alt="">
+                            <img class="round-corners" src="img/works/work-3/Paradise-Flycatcher-1.png" alt="">
                         </div>
                     </div>
                     <!-- a image -->
                     <div class="col-lg-12 bottom_60">
                         <div class="image">
-                            <img src="img/works/work-3/Gibbon.jpg" alt="">
+                            <img class="round-corners" class="round-corners" src="img/works/work-3/Gibbon.jpg" alt="">
                         </div>
                     </div>
                     <!-- a image -->
                     <div class="col-lg-12 bottom_60">
                         <div class="image">
-                            <img src="img/works/work-3/Cheetah.png" alt="">
+                            <img class="round-corners" src="img/works/work-3/Cheetah.png" alt="">
                         </div>
                     </div>
                     <!-- a image -->
                     <div class="col-lg-12">
                         <div class="image">
-                            <img src="img/works/work-3/Green-Turtle.png" alt="">
+                            <img class="round-corners" src="img/works/work-3/Green-Turtle.png" alt="">
                         </div>
                     </div>
                 </div>
@@ -161,17 +161,17 @@
         </section>
             <!-- project-detail end -->
 <!-- ======= portfolio carousel | Start ======= -->
-<section data-midnight="white">
+<section data-midnight="white" class="lightgrey-bg">
      
         <div class="owl-carousel owl-theme portfolio-carousel col-lg-8 offset-lg-2" data-autoplay="true" data-nav="false" data-dots="true" data-items-desktop="1" data-items-desktop-small="1" data-items-tablet="1" data-items-tablet-small="1">
-            <div class="item">
-                <img src="img/works/work-3/Gibbons.jpg" alt="">
+            <div class="item lightgrey-bg">
+                <img class="mutiply-blend-mode" src="img/works/work-3/Gibbons.jpg" alt="">
             </div>
-            <div class="item">
-                <img src="img/works/work-3/Green-Turtle.jpg" alt="">
+            <div class="item lightgrey-bg">
+                <img class="mutiply-blend-mode" src="img/works/work-3/Green-Turtle.jpg" alt="">
             </div>
-            <div class="item">
-                <img src="img/works/work-3/Paradise-Flycatcher.jpg" alt="">
+            <div class="item lightgrey-bg">
+                <img class="mutiply-blend-mode" src="img/works/work-3/Paradise-Flycatcher.jpg" alt="">
             </div>
         </div>
 </section>
