Updates to Galaxy UI/UX work
Looking good

--- a/Galaxy.html
+++ b/Galaxy.html
@@ -106,77 +106,159 @@
 
 <!-- Work Content
 ================================================== -->
-<section  data-midnight="dark" class="galaxy-bg-purple-gradient">
+<section  data-midnight="dark" class="white">
   <div class="container project-detail">
-    <h2 class="title bottom_30 white-text">The Problem</h2>
-    <p class="white-text">The "Men in Black" like any other person on earth also do tedious office work, for such operations they use Galaxy, an ancient system that once did everything; from looking for the bad guys to helping agents requesting new guns, steplers, and even pens. The once highly funded agency is a shodow of itself 10 years have past and no updates has been made to this system since 2010. Fortunately 2020 has brought new funding and the IT department has been tasked to updated this system.</p>
+    <h2 class="title bottom_30 text-center">The problem</h2>
+    <p class="text-center">The "Men in Black" like any other people on earth, also, do tedious office work, for such work they use Galaxy, an ancient system that once did everything; from looking for the bad guys to helping agents requesting new guns, or steplers. The once highly funded application is a shodow of itself. 10 years have passed by and no updates has been made to this product. Which has propted users to rely on a long list of work-arounds. Fortunately 2020 has brought new funding and the IT department has been tasked to updated this system. The problem = too many problems</p>
   </div>
   </section>    
 </section>
+
+<!-- Three Columns - Text & Image | Start  -->
+<section  data-midnight="dark" class="dark galaxy-bg">
+  <div class="project-detail">
+          <div class="row">
+              <div class="col-lg-12">
+              <h2 class="text title text-center">The users</h2>
+          </div>
+          </div>
+  </div>
+  
+      <div class="container project-detail">
+        <div class="row lightbox-gallery">
+            <div class="col-lg-4">
+              <div class="image">
+                  <img src="img/works/Galaxy/Users/Noisy-Cricket.svg" alt="Assignee Agent J">
+              </div>
+              <h2 class="title bottom_30">Assignee</h2>
+                <p>In the field things can get tragic pretty quickly. Some people above me would pay to go back into the field and feel the adrenaline of riskyng one's life. The flying cars and the guns are nothing in comparison to that awful feeling of having your stomach drop to the ground everytime one knocks at a stranger's door.</p>
+            </div>
+            <div class="col-lg-4">
+              <div class="image">
+                  <img src="img/works/Galaxy/Users/Supervisor.svg" alt="Agent G/Supersivor">
+              </div>
+                <h2 class="title bottom_30">Supervisor</h2>
+                  <p>My peeps on the field are putting their life on the line, and as their supervisor I feel like they have trusted me with their life, so I'll do whatever is on my power to get them, whatever they need to get, safely. If they return home in once piece I did my job. If keeping them safe cost us some money so be it.</p>
+            </div>
+            <div class="col-lg-4">
+              <div class="image">
+                  <img src="img/works/Galaxy/Users/CFO.svg" alt="Chief/CFO">
+              </div> 
+              <h2 class="title bottom_30">CFO</h2>
+                <p>I am the money guy, in my eyes some people in the field think every assigment a Michael Bey movie. If they do that everytime they go out I got a problem. Do they think we have an infinite suply of money?, the thing is that if I burn the fiscal budget before the end of the year–I get in trouble not them!</p>
+          </div>        
+      </div>
+    </div>  
+  </section>
+  <!-- Three Columns - Text & Image | End  -->
+<section class="project-detail">
+  <div>
+    <h3 class=" text subtitle text-center">One of many solutions</h3>
+    <p class="text-center">Having too many things to update a request maganer system seems like the most "bang for your buck" solution. Solution = streamline as many workflows as possible.</p>
+  </div>
+</section>
 <!-- One Column - centered image | Start  -->
 <section data-midnight="dark" class="dark galaxy-bg">
-    <div class="project-detail">
-        <h3 class=" text subtitle text-center">Introducing new visual elements</h3>
-        <p class="text-center padbot_30">City maps, geometric shapes, and new colors</p>
-            
         <div class="container">
             <!-- Images -->
             <div class="row lightbox-gallery">
                 <!-- a image -->
-                <div class="col-lg-12">
+                <div class="col-lg-4 bottom_30">
+                  <div class="image">
+                    <img src="img/works/Galaxy/Users/Noisy-Cricket.svg" alt="Assignee Agent J">
+                </div>
                     <div class="image">
-                        <img src="img/works/Galaxy/Resource-Request-Workflow.png" alt="Request Worflow">
+                        <img src="img/works/Galaxy/Users/Assignee-Workflow.svg" alt="Request Worflow">
                     </div>
                 </div>
+                <!-- a image -->
+                <!-- a image -->
+                                <div class="col-lg-4 bottom_30">
+                                  <div class="image">
+                                    <img src="img/works/Galaxy/Users/Supervisor.svg" alt="Agent G/Supersivor">
+                                </div>
+                                  <div class="image">
+                                      <img src="img/works/Galaxy/Users/supervisor-workflow.svg" alt="Request Worflow">
+                                  </div>
+                              </div>
+                <!-- a image -->
+                                <!-- a image -->
+                                <div class="col-lg-4 bottom_30">
+                                  <div class="image">
+                                    <img src="img/works/Galaxy/Users/CFO.svg" alt="Chief/CFO">
+                                </div> 
+                                  <div class="image">
+                                      <img src="img/works/Galaxy/Users/CFO-Workflow.svg" alt="Request Worflow">
+                                  </div>
+                              </div>
+                <!-- a image -->
             </div>
         </div>
-    </div>
 </section>
 <!-- One Column - centered image | End  -->
-
-<!-- Three Columns - Text & Image | Start  -->
-<section  data-midnight="dark" class="dark galaxy-bg">
-<div class="project-detail">
-        <div class="row">
-            <div class="col-lg-12">
-            <h2 class="text title text-center">Users</h2>
-            <p class="text-center padbot_30">City maps, geometric shapes, and new colors</p>
-        </div>
-        </div>
+<section class="project-detail">
+  <div>
+    <h3 class="text subtitle text-center">Branding</h3>
+  </div>
+</section>
+<section class="galaxy-bg-purple-gradient">
+  <div class="row">
 </div>
-
-    <div class="container project-detail">
-      <div class="row">
-          <div class="col-lg-4">
-            <div class="image">
-                <img src="img/works/Galaxy/Users/Noisy Cricket.png" alt="Assignee Agent J">
-            </div>
-            <h2 class="title bottom_30">Assignee</h2>
-              <p>In the field things can get tragic pretty quickly. Some people above me would pay to go back into the field and feel the adrenaline of riskyng one's life. The flying cars and the guns are nothing in comparison to that awful feeling of having your stomach drop to the ground everytime one knocks at a stranger's door.</p>
-          </div>
-          <div class="col-lg-4">
-            <div class="image">
-                <img src="img/works/Galaxy/Users/Supervisor.png" alt="Agent G/Supersivor">
-            </div>
-              <h2 class="title bottom_30">Supervisor</h2>
-                <p>My peeps on the field are putting their life on the line, and as their supervisor I feel like they have trusted me with their life, so I'll do whatever is on my power to get them, whatever they need to get, safely. If they return home in once piece I did my job. If keeping them safe cost us some money so be it.</p>
-          </div>
-          <div class="col-lg-4">
-            <div class="image">
-                <img src="img/works/Galaxy/Users/CFO.png" alt="Chief/CFO">
-            </div> 
-            <h2 class="title bottom_30">CFO</h2>
-              <p>I am the money guy, in my eyes some people in the field think every assigment a Michael Bey movie. If they do that everytime they go out I got a problem. Do they think we have an infinite suply of money?, the thing is that if I burn the fiscal budget before the end of the year–I get in trouble not them!</p>
-        </div>        
-    </div>
-  </div>  
+  <div class="col-lg-4 offset-lg-4 col-sm-4 offset-sm-4">
+    <img src="img/works/Galaxy/GAL-AXY-LOGO.svg" alt="Logo">
+  </div>
+</section>
+<section class="project-detail galaxy-bg-to-black">
+  <div class="col-lg-12">
+    <h2 class="text title white-text text-center">Colors</h2>
+</div>
+<div class="row">
+  <div class="col-lg-10 offset-lg-1 col-md-10 offset-md-1 col-sm-8 offset-sm-2 top_60">
+    <img src="img/works/Galaxy/Secondary-Colors.svg" alt="Logo">
+    <p class="text-center white-text top_15">Secondary</p>
+  </div>
+  <div class="col-lg-10 offset-lg-1 col-md-10 offset-md-1 col-sm-8 offset-sm-2 top_60">
+    <img src="img/works/Galaxy/Primary-Colors.svg" alt="Logo">
+    <p class="text-center white-text top_15">Primary</p>
+  </div>
+</section>
+<section class="project-detail galaxy-bg-purple">
+  <div class="col-lg-12">
+    <h2 class="text title white-text text-center">Typography</h2>
+</div>
+<div class="row">
+  <div class="col-lg-8 offset-lg-2 col-md-10 offset-md-1 col-sm-8 offset-sm-2 top_60">
+    <img src="img/works/Galaxy/Ezzo-Font-Family.svg" alt="Ezzo Font Family">
+    <p class="text-center white-text top_15">Ezzo font family</p>
+  </div>
+</section>
+<section class="project-detail">
+  <div class="col-lg-12">
+    <h2 class="text title text-center">Iconography</h2>
+</div>
+<div class="row">
+  <div class="col-lg-6 offset-lg-3 col-md-10 offset-md-1 col-sm-8 offset-sm-2 top_60">
+    <img src="img/works/Galaxy/Icons-for-Galaxy.svg" alt="Ezzo Font Family">
+    <p class="text-center white-text top_15">Ezzo font family</p>
+  </div>
+</section>
+<section class="lightgrey-bg">
+  <div class="project-detail">
+    <h2 class="text title text-center">UI components</h2>
+</div>
+<div class="row">
+  <div class="col-lg-6 offset-lg-3 col-md-10 offset-md-1 col-sm-8 offset-sm-2 top_60">
+    <img src="img/works/Galaxy/Icons-for-Galaxy.svg" alt="Ezzo Font Family">
+  </div>
 </section>
 
-<!-- Three Columns - Text & Image | End  -->
+
+
+
 
 
 <section>
-    <div class="col-lg-12 text-center top_60">
+    <div class="col align-self-center text-center top_60">
     <a class="next-link" href="work-6.html">
         <div class="nav-title">Next Work</div>
         <div class="next-title">Brandenburg Countryside</div>
