--- a/Biodiversity-Festival.html
+++ b/Biodiversity-Festival.html
@@ -143,12 +143,12 @@
     <div class="row">
       <div class="col-lg-6">
         <div class="image bottom_30">
-          <img src="img/works/work-6/Express-Ad-Biodiversity-Festival.jpg" alt="Stand">
+          <img class="round-corners" src="img/works/work-6/Express-Ad-Biodiversity-Festival.jpg" alt="Stand">
         </div>
       </div>
       <div class="col-lg-6">
         <div class="image bottom_120">
-          <img src="img/works/work-6/Kids_drawing@Bioblitz.jpg" alt="Stand">
+          <img class="round-corners" src="img/works/work-6/Kids_drawing@Bioblitz.jpg" alt="Stand">
         </div>
       </div>
     </div>
@@ -171,12 +171,12 @@
         
         <div class="col-lg-6">
           <div class="image bottom_30">
-            <img src="img/works/work-6/BBB-Hero-Image-1500x994.png" alt="Stand">
+            <img class="round-corners" src="img/works/work-6/BBB-Hero-Image-1500x994.png" alt="Stand">
           </div>
         </div>
         <div class="col-lg-6">
           <div class="image bottom_120">
-            <img src="https://farm8.staticflickr.com/7261/27054125552_c01ce3106f_o.jpg" alt="Stand">
+            <img class="round-corners" src="https://farm8.staticflickr.com/7261/27054125552_c01ce3106f_o.jpg" alt="Stand">
           </div>
         </div>
       </div>
@@ -197,9 +197,9 @@
 <div class="container">
   <div class="row">
     
-    <div class="col-lg-12">
+    <div class="col-lg-8 offset-lg-2 col-md-8 offset-md-2 col-sm-8 offset-sm-2">
       <div class="image bottom_120">
-        <img src="img/works/work-6/Bugs-Bat-and-Brews.gif" alt="Stand">
+        <img class="round-corners" src="img/works/work-6/Bugs-Bat-and-Brews.gif" alt="Stand">
       </div>
     </div>
   </div>
