--- a/Galaxy.html
+++ b/Galaxy.html
@@ -106,20 +106,27 @@
 
 <!-- Work Content
 ================================================== -->
-<section  data-midnight="dark" class="white">
-  <div class="container project-detail">
-    <h2 class="title bottom_30 text-center">The problem</h2>
-    <p class="text-center">The "Men in Black" like any other people on earth, also, do tedious office work, for such work they use Galaxy, an ancient system that once did everything; from looking for the bad guys to helping agents requesting new guns, or steplers. The once highly funded application is a shodow of itself. 10 years have passed by and no updates has been made to this product. Which has propted users to rely on a long list of work-arounds. Fortunately 2020 has brought new funding and the IT department has been tasked to updated this system. The problem = too many problems</p>
+<section  data-midnight="dark" class="galaxy-bg-purple-gradient">
+<div class="container project-detail">  
+<div class="row lightbox-gallery">  
+  <div class="col-lg-8">
+    <h2 class="title white-text">The problem</h2>
+    <p class="white-text">The "Men in Black" like any other people on earth, also, do tedious office work, for such work they use Galaxy, an ancient system that once did everything; from looking for the bad guys to helping agents requesting new guns, or steplers. The once highly funded application is a shodow of itself. 10 years have passed by and no updates has been made to this product. Which has propted users to rely on a long list of work-arounds. Fortunately 2020 has brought new funding and the IT department has been tasked to updated this system. <br> Now the the problem is too many problems to fix</p>
   </div>
+  <div class="col-lg-4">
+    <h2 class="title white-text">My Role</h2>
+    <p class="white-text">In this "ficticious role" I was the man, not one of the "Men in Black" but the only UX guy, so I was the whole team, I did the most I could. Anyway, BAs did the reasearch and I sat there nodding in a lot of meetings, I also helped setting up workshop and mapping workflows, I liked the BAs, the devs not so much.
+</div> 
+</div>
+</div>   
   </section>    
-</section>
 
 <!-- Three Columns - Text & Image | Start  -->
 <section  data-midnight="dark" class="dark galaxy-bg">
-  <div class="project-detail">
+  <div class="container project-detail">
           <div class="row">
               <div class="col-lg-12">
-              <h2 class="text title text-center">The users</h2>
+              <h2 class="text text-center title">The users</h2>
           </div>
           </div>
   </div>
@@ -145,50 +152,55 @@
                   <img src="img/works/Galaxy/Users/CFO.svg" alt="Chief/CFO">
               </div> 
               <h2 class="title bottom_30">CFO</h2>
-                <p>I am the money guy, in my eyes some people in the field think every assigment a Michael Bey movie. If they do that everytime they go out I got a problem. Do they think we have an infinite suply of money?, the thing is that if I burn the fiscal budget before the end of the year–I get in trouble not them!</p>
+                <p>I am the money guy, in my eyes some people in the field think every assigment is a Michael Bey movie. Everytime they go out and cost me more money than they should I got a problem. Do they think we have an infinite suply of money?, if I burn the fiscal budget before the end of the year–I get in trouble not them!</p>
           </div>        
       </div>
     </div>  
   </section>
   <!-- Three Columns - Text & Image | End  -->
-<section class="project-detail">
+<section class="project-detail black-bg">
   <div>
-    <h3 class=" text subtitle text-center">One of many solutions</h3>
-    <p class="text-center">Having too many things to update a request maganer system seems like the most "bang for your buck" solution. Solution = streamline as many workflows as possible.</p>
+    <h3 class="text subtitle white-text text-center">The solution bussiness agreed on</h3>
+    <p class="text project-detail white-text text-center">A workflow management system seems like the most "bang for your buck." <br> Solution = streamline as many workflows as possible to show them why they should built a workflow management system.</p>
   </div>
 </section>
+
+
 <!-- One Column - centered image | Start  -->
 <section data-midnight="dark" class="dark galaxy-bg">
+  <div class="project-detail">
+    <h3 class="text subtitle white-text text-center">Fixing most common worflow</h3>
+  </div>
         <div class="container">
             <!-- Images -->
             <div class="row lightbox-gallery">
                 <!-- a image -->
-                <div class="col-lg-4 bottom_30">
+                <div class="col-lg-4">
                   <div class="image">
                     <img src="img/works/Galaxy/Users/Noisy-Cricket.svg" alt="Assignee Agent J">
                 </div>
                     <div class="image">
-                        <img src="img/works/Galaxy/Users/Assignee-Workflow.svg" alt="Request Worflow">
+                        <img src="img/works/Galaxy/Users/Assignee-Workflow-1.svg" alt="Request Worflow">
                     </div>
                 </div>
                 <!-- a image -->
                 <!-- a image -->
-                                <div class="col-lg-4 bottom_30">
+                                <div class="col-lg-4">
                                   <div class="image">
                                     <img src="img/works/Galaxy/Users/Supervisor.svg" alt="Agent G/Supersivor">
                                 </div>
                                   <div class="image">
-                                      <img src="img/works/Galaxy/Users/supervisor-workflow.svg" alt="Request Worflow">
+                                      <img src="img/works/Galaxy/Users/Supervisor-Workflow-2.svg" alt="Request Worflow">
                                   </div>
                               </div>
                 <!-- a image -->
                                 <!-- a image -->
-                                <div class="col-lg-4 bottom_30">
+                                <div class="col-lg-4">
                                   <div class="image">
                                     <img src="img/works/Galaxy/Users/CFO.svg" alt="Chief/CFO">
                                 </div> 
                                   <div class="image">
-                                      <img src="img/works/Galaxy/Users/CFO-Workflow.svg" alt="Request Worflow">
+                                      <img src="img/works/Galaxy/Users/CFO-Workflow-3.svg" alt="Request Worflow">
                                   </div>
                               </div>
                 <!-- a image -->
@@ -196,23 +208,86 @@
         </div>
 </section>
 <!-- One Column - centered image | End  -->
-<section class="project-detail">
-  <div>
-    <h3 class="text subtitle text-center">Branding</h3>
+
+<!-- Full Screen Image | Start  -->
+  <section class="galaxy-bg">
+    <h3 class="text subtitle white-text text-center bottom_120">Wireframes</h3>
+  <div class=""top_120" data-midnight="white" id="fullscreen-galaxy-wireframes"></div>
+</section>
+<!-- Full Screen Image | End  -->
+
+<section class="lightgrey-bg purple-gradient-galaxy-bg">
+  <div class="project-detail bottom_30">
+    <h2 class="white-text title text-center">Final Product</h2>
+</div>
+  <div class="col-lg-10 offset-lg-1 col-md-10 offset-md-1 col-sm-8 offset-sm-2 top_60">
+    <img class="image" src="img/works/Galaxy/Laptop-with-log-in.svg" alt="Log In">
   </div>
 </section>
-<section class="galaxy-bg-purple-gradient">
-  <div class="row">
-</div>
+
+        <!-- One Column - centered image | Start  -->
+        <section data-midnight="white" class="galaxy-bg-purple">
+              <div class="container">
+                  <!-- Images -->
+                  <div class="row lightbox-gallery">
+                      <!-- a image -->
+                      <div class="col-lg-12">
+                          <div class="image bottom_60">
+                              <img class="round-corners" src="img/works/Galaxy/Screens/Facility Profile.png" alt="Facility Profile">
+                          </div>
+                      </div>
+                  </div>
+                  <!-- Images -->
+
+                                    <!-- Images -->
+                                    <div class="row lightbox-gallery">
+                                      <!-- a image -->
+                                      <div class="col-lg-12">
+                                          <div class="image bottom_60">
+                                              <img class="round-corners" src="img/works/Galaxy/Screens/New Request.png" alt="New Request">
+                                          </div>
+                                      </div>
+                                  </div>
+                                  <!-- Images -->
+                        <!-- Images -->
+                        <div class="row lightbox-gallery">
+                          <!-- a image -->
+                          <div class="col-lg-12">
+                              <div class="image bottom_60">
+                                  <img class="round-corners" src="img/works/Galaxy/Screens/Request Ledger.png" alt="Request Ledger">
+                              </div>
+                          </div>
+                      </div>
+                      <!-- Images -->
+                          <!-- Images -->
+                          <div class="row lightbox-gallery">
+                            <!-- a image -->
+                            <div class="col-lg-12">
+                                <div class="image bottom_60">
+                                    <img class="round-corners" src="img/works/Galaxy/Screens/Rejecting-Approving request.png" alt="Approve/Deny">
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Images -->              
+              </div>
+          </div>
+      </section>
+      <!-- One Column - centered image | End  -->
+
+<section class="project-detail">
+  <div>
+    <h3 class="text subtitle text-center">Design System</h3>
+  </div>
+</section>
+<section class="galaxy-bg-purple-gradient lightbox-gallery">
   <div class="col-lg-4 offset-lg-4 col-sm-4 offset-sm-4">
     <img src="img/works/Galaxy/GAL-AXY-LOGO.svg" alt="Logo">
   </div>
 </section>
-<section class="project-detail galaxy-bg-to-black">
+<section class="project-detail galaxy-bg-to-black lightbox-gallery">
   <div class="col-lg-12">
     <h2 class="text title white-text text-center">Colors</h2>
 </div>
-<div class="row">
   <div class="col-lg-10 offset-lg-1 col-md-10 offset-md-1 col-sm-8 offset-sm-2 top_60">
     <img src="img/works/Galaxy/Secondary-Colors.svg" alt="Logo">
     <p class="text-center white-text top_15">Secondary</p>
@@ -222,33 +297,30 @@
     <p class="text-center white-text top_15">Primary</p>
   </div>
 </section>
-<section class="project-detail galaxy-bg-purple">
+<section class="project-detail galaxy-bg-purple lightbox-gallery">
   <div class="col-lg-12">
     <h2 class="text title white-text text-center">Typography</h2>
 </div>
-<div class="row">
   <div class="col-lg-8 offset-lg-2 col-md-10 offset-md-1 col-sm-8 offset-sm-2 top_60">
     <img src="img/works/Galaxy/Ezzo-Font-Family.svg" alt="Ezzo Font Family">
     <p class="text-center white-text top_15">Ezzo font family</p>
   </div>
 </section>
-<section class="project-detail">
+<section class="project-detail lightbox-gallery">
   <div class="col-lg-12">
     <h2 class="text title text-center">Iconography</h2>
 </div>
-<div class="row">
   <div class="col-lg-6 offset-lg-3 col-md-10 offset-md-1 col-sm-8 offset-sm-2 top_60">
     <img src="img/works/Galaxy/Icons-for-Galaxy.svg" alt="Ezzo Font Family">
     <p class="text-center white-text top_15">Ezzo font family</p>
   </div>
 </section>
-<section class="lightgrey-bg">
+<section class="lightgrey-bg galaxy-bg">
   <div class="project-detail">
-    <h2 class="text title text-center">UI components</h2>
+    <h2 class="white-text title text-center">UI components</h2>
 </div>
-<div class="row">
-  <div class="col-lg-6 offset-lg-3 col-md-10 offset-md-1 col-sm-8 offset-sm-2 top_60">
-    <img src="img/works/Galaxy/Icons-for-Galaxy.svg" alt="Ezzo Font Family">
+  <div class="col-lg-10 offset-lg-1 col-md-10 offset-md-1 col-sm-8 offset-sm-2 top_60">
+    <img src="img/works/Galaxy/UI-Components.svg" alt="Ezzo Font Family">
   </div>
 </section>
 
