Logo Update and Galaxy last updates
Looking good

--- a/Galaxy.html
+++ b/Galaxy.html
@@ -158,7 +158,7 @@
     </div>  
   </section>
   <!-- Three Columns - Text & Image | End  -->
-<section class="project-detail black-bg">
+<section data-midnight="dark" class="project-detail black-bg">
   <div>
     <h3 class="text subtitle white-text text-center">The solution bussiness agreed on</h3>
     <p class="text project-detail white-text text-center">A workflow management system seems like the most "bang for your buck." <br> Solution = streamline as many workflows as possible to show them why they should built a workflow management system.</p>
@@ -216,7 +216,7 @@
 </section>
 <!-- Full Screen Image | End  -->
 
-<section class="lightgrey-bg purple-gradient-galaxy-bg">
+<section data-midnight="dark" class="lightgrey-bg purple-gradient-galaxy-bg">
   <div class="project-detail bottom_30">
     <h2 class="white-text title text-center">Final Product</h2>
 </div>
@@ -226,7 +226,7 @@
 </section>
 
         <!-- One Column - centered image | Start  -->
-        <section data-midnight="white" class="galaxy-bg-purple">
+        <section data-midnight="dark" class="galaxy-bg-purple">
               <div class="container">
                   <!-- Images -->
                   <div class="row lightbox-gallery">
@@ -274,30 +274,30 @@
       </section>
       <!-- One Column - centered image | End  -->
 
-<section class="project-detail">
+<section data-midnight="white" class="project-detail">
   <div>
     <h3 class="text subtitle text-center">Design System</h3>
   </div>
 </section>
-<section class="galaxy-bg-purple-gradient lightbox-gallery">
+<section data-midnight="dark" class="galaxy-bg-purple-gradient lightbox-gallery">
   <div class="col-lg-4 offset-lg-4 col-sm-4 offset-sm-4">
     <img src="img/works/Galaxy/GAL-AXY-LOGO.svg" alt="Logo">
   </div>
 </section>
-<section class="project-detail galaxy-bg-to-black lightbox-gallery">
+<section data-midnight="dark" class="project-detail galaxy-bg-to-black lightbox-gallery">
   <div class="col-lg-12">
     <h2 class="text title white-text text-center">Colors</h2>
 </div>
   <div class="col-lg-10 offset-lg-1 col-md-10 offset-md-1 col-sm-8 offset-sm-2 top_60">
-    <img src="img/works/Galaxy/Secondary-Colors.svg" alt="Logo">
+    <img src="img/works/Galaxy/Galaxy-Secondary-Colors.svg" alt="Logo">
     <p class="text-center white-text top_15">Secondary</p>
   </div>
   <div class="col-lg-10 offset-lg-1 col-md-10 offset-md-1 col-sm-8 offset-sm-2 top_60">
-    <img src="img/works/Galaxy/Primary-Colors.svg" alt="Logo">
+    <img src="img/works/Galaxy/Galaxy-Primary-Colors.svg" alt="Logo">
     <p class="text-center white-text top_15">Primary</p>
   </div>
 </section>
-<section class="project-detail galaxy-bg-purple lightbox-gallery">
+<section data-midnight="dark" class="project-detail galaxy-bg-purple lightbox-gallery">
   <div class="col-lg-12">
     <h2 class="text title white-text text-center">Typography</h2>
 </div>
@@ -306,34 +306,48 @@
     <p class="text-center white-text top_15">Ezzo font family</p>
   </div>
 </section>
-<section class="project-detail lightbox-gallery">
+<section data-midnight="white" class="project-detail lightbox-gallery">
   <div class="col-lg-12">
     <h2 class="text title text-center">Iconography</h2>
 </div>
   <div class="col-lg-6 offset-lg-3 col-md-10 offset-md-1 col-sm-8 offset-sm-2 top_60">
-    <img src="img/works/Galaxy/Icons-for-Galaxy.svg" alt="Ezzo Font Family">
+    <img src="img/works/Galaxy/Icons-for-Galaxy.svg" alt="Icons">
     <p class="text-center white-text top_15">Ezzo font family</p>
   </div>
 </section>
-<section class="lightgrey-bg galaxy-bg">
+<section data-midnight="dark" class="lightgrey-bg galaxy-bg">
   <div class="project-detail">
     <h2 class="white-text title text-center">UI components</h2>
 </div>
   <div class="col-lg-10 offset-lg-1 col-md-10 offset-md-1 col-sm-8 offset-sm-2 top_60">
-    <img src="img/works/Galaxy/UI-Components.svg" alt="Ezzo Font Family">
+    <img src="img/works/Galaxy/UI-Components.svg" alt="Dark UI Components">
   </div>
 </section>
-
+<section data-midnight="dark" class="galaxy-bg-to-black">
+<div class="project-detail">
+  <h2 class="white-text title text-center bottom_120">Profile of a villain</h2>
+</div>
+                  <!-- Images -->
+                  <div class="row lightbox-gallery">
+                    <!-- a image -->
+                    <div class="col-lg-10 offset-lg-1">
+                        <div class="image top_60">
+                            <img class="round-corners" src="img/works/Galaxy/Screens/Villain-profile.png" alt="Profile of a villain">
+                        </div>
+                    </div>
+                </div>
+                <!-- Images -->
+</section>
 
 
 
 
 
 <section>
-    <div class="col align-self-center text-center top_60">
-    <a class="next-link" href="work-6.html">
+    <div class="col align-self-center text-center top_30">
+    <a class="next-link" href="USA-Today.html">
         <div class="nav-title">Next Work</div>
-        <div class="next-title">Brandenburg Countryside</div>
+        <div class="next-title">USA Today</div>
     </a>
     </div>
 </section>
