--- a/Galaxy.html
+++ b/Galaxy.html
@@ -106,46 +106,65 @@
 
 <!-- Work Content
 ================================================== -->
-<section  data-midnight="dark" class="galaxy-bg-purple-gradient">
+<section  data-midnight="dark" class="galaxy-bg">
 <div class="container project-detail">  
 <div class="row lightbox-gallery">  
-  <div class="col-lg-8">
-    <h2 class="title white-text">The problem</h2>
-    <p class="white-text">The "Men in Black" like any other people on earth, also, do tedious office work, for such work they use Galaxy, an ancient system that once did everything; from looking for the bad guys to helping agents requesting new guns, or steplers. The once highly funded application is a shodow of itself. 10 years have passed by and no updates has been made to this product. Which has propted users to rely on a long list of work-arounds. Fortunately 2020 has brought new funding and the IT department has been tasked to updated this system. <br> Now the the problem is too many problems to fix</p>
+  <div class="col-lg-5 col-md-12 bottom_60">
+    <div style="width:100%;height:0;padding-bottom:54%;position:relative;"><iframe src="https://giphy.com/embed/whzzWFp4j7vKE" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed round-corners" allowFullScreen></iframe>
+    </div>
   </div>
-  <div class="col-lg-4">
-    <h2 class="title white-text">My Role</h2>
-    <p class="white-text">In this "ficticious role" I was the man, not one of the "Men in Black" but the only UX guy, so I was the whole team, I did the most I could. Anyway, BAs did the reasearch and I sat there nodding in a lot of meetings, I also helped setting up workshop and mapping workflows, I liked the BAs, the devs not so much.
+  <div class="col-lg-7 col-md-12">
+    <h2 class="title white-text">Why Agent J got the noisy criket?</h2>
+    <p class="white-text">Short answer, bad user experience.  Thinking as a UX person I thought Agent J was not only a rookie being played. He was also at the mercy of a bad onboarding process. You see he walked in that room without having filed a proper request!.  So of course he was not aware of what was in store for him.  Lack of awareness, a very familiar problem in many companies around the galaxy.</p>
 </div> 
 </div>
 </div>   
-  </section>    
+  </section>   
+  
+  <section data-midnight="white" class="project-detail white">
+    <div>
+      <h3 class="text subtitle text-center">How would one fix the MIB’s user experience?</h3>
+      <p class="text project-detail text-center"> You know, bringing awarness into their way of working, wich in turns bring accoutability. How would I do that?<br> 
+        1. Mapping & streamlining their existing worklfows  2. Designing a request management system , 3. providing a killer UX/UI</p>
+    </div>
+  </section>
 
 <!-- Three Columns - Text & Image | Start  -->
 <section  data-midnight="dark" class="dark galaxy-bg">
   <div class="container project-detail">
-          <div class="row">
-              <div class="col-lg-12">
-              <h2 class="text text-center title">The users</h2>
-          </div>
-          </div>
+    <div class="row lightbox-gallery bottom_60">
+          <div class="image col-lg-2 offset-lg-5 col-md-2 offset-md-5">
+          <img src="img/works/Galaxy/Step 1.svg" alt="Step One">
+    </div>
   </div>
-  
+    <div class="row">
+      <div class="col-lg-12">
+             <h2 class="text text-center title">Mapping & streamlining their existing worklfows</h2>
+      </div>
+  </div>
+  </div>
+
       <div class="container project-detail">
         <div class="row lightbox-gallery">
             <div class="col-lg-4">
               <div class="image">
                   <img src="img/works/Galaxy/Users/Noisy-Cricket.svg" alt="Assignee Agent J">
               </div>
-              <h2 class="title bottom_30">Assignee</h2>
+              <h2 class="title bottom_30">Agent J</h2>
                 <p>In the field things can get tragic pretty quickly. Some people above me would pay to go back into the field and feel the adrenaline of riskyng one's life. The flying cars and the guns are nothing in comparison to that awful feeling of having your stomach drop to the ground everytime one knocks at a stranger's door.</p>
+                <div class="image top_30">
+                  <img src="img/works/Galaxy/Users/Assignee-Workflow-1.svg" alt="Request Worflow">
+              </div>
             </div>
             <div class="col-lg-4">
               <div class="image">
                   <img src="img/works/Galaxy/Users/Supervisor.svg" alt="Agent G/Supersivor">
               </div>
                 <h2 class="title bottom_30">Supervisor</h2>
-                  <p>My peeps on the field are putting their life on the line, and as their supervisor I feel like they have trusted me with their life, so I'll do whatever is on my power to get them, whatever they need to get, safely. If they return home in once piece I did my job. If keeping them safe cost us some money so be it.</p>
+                  <p>My peeps on the field are putting their life on the line, and as their supervisor I feel like they have trusted me with their life, so I'll do whatever is on my power to get them, whatever they need to get, safely. If they return home in once piece I did my job. If safety cost us some money so be it.</p>
+                  <div class="image top_30">
+                    <img src="img/works/Galaxy/Users/Supervisor-Workflow-2.svg" alt="Request Worflow">
+                </div>
             </div>
             <div class="col-lg-4">
               <div class="image">
@@ -153,72 +172,66 @@
               </div> 
               <h2 class="title bottom_30">CFO</h2>
                 <p>I am the money guy, in my eyes some people in the field think every assigment is a Michael Bey movie. Everytime they go out and cost me more money than they should I got a problem. Do they think we have an infinite suply of money?, if I burn the fiscal budget before the end of the year–I get in trouble not them!</p>
+                <div class="image top_30">
+                  <img src="img/works/Galaxy/Users/CFO-Workflow-3.svg" alt="Request Worflow">
+              </div>
           </div>        
       </div>
     </div>  
-  </section>
-  <!-- Three Columns - Text & Image | End  -->
-<section data-midnight="dark" class="project-detail black-bg">
-  <div>
-    <h3 class="text subtitle white-text text-center">The solution bussiness agreed on</h3>
-    <p class="text project-detail white-text text-center">A workflow management system seems like the most "bang for your buck." <br> Solution = streamline as many workflows as possible to show them why they should built a workflow management system.</p>
-  </div>
 </section>
+<!-- Three Columns - Text & Image | End  -->
 
-
-<!-- One Column - centered image | Start  -->
-<section data-midnight="dark" class="dark galaxy-bg">
-  <div class="project-detail">
-    <h3 class="text subtitle white-text text-center">Fixing most common worflow</h3>
-  </div>
-        <div class="container">
-            <!-- Images -->
-            <div class="row lightbox-gallery">
-                <!-- a image -->
-                <div class="col-lg-4">
-                  <div class="image">
-                    <img src="img/works/Galaxy/Users/Noisy-Cricket.svg" alt="Assignee Agent J">
-                </div>
-                    <div class="image">
-                        <img src="img/works/Galaxy/Users/Assignee-Workflow-1.svg" alt="Request Worflow">
-                    </div>
-                </div>
-                <!-- a image -->
-                <!-- a image -->
-                                <div class="col-lg-4">
-                                  <div class="image">
-                                    <img src="img/works/Galaxy/Users/Supervisor.svg" alt="Agent G/Supersivor">
-                                </div>
-                                  <div class="image">
-                                      <img src="img/works/Galaxy/Users/Supervisor-Workflow-2.svg" alt="Request Worflow">
-                                  </div>
-                              </div>
-                <!-- a image -->
-                                <!-- a image -->
-                                <div class="col-lg-4">
-                                  <div class="image">
-                                    <img src="img/works/Galaxy/Users/CFO.svg" alt="Chief/CFO">
-                                </div> 
-                                  <div class="image">
-                                      <img src="img/works/Galaxy/Users/CFO-Workflow-3.svg" alt="Request Worflow">
-                                  </div>
-                              </div>
-                <!-- a image -->
+<!-- Three Columns - Text & Image | Start  -->
+<section  data-midnight="dark" class="dark galaxy-bg">
+  <div class="container project-detail">
+    <div class="row lightbox-gallery bottom_60">
+            <div class="image col-lg-2 offset-lg-5 col-md-2 offset-md-5">
+                  <img src="img/works/Galaxy/Step 2.svg" alt="Step Two">
             </div>
-        </div>
-</section>
-<!-- One Column - centered image | End  -->
+  </div>
+    <div class="row">
+      <div class="col-lg-12 bottom_120">
+             <h2 class="text text-center title">Designing a request management system</h2>
+      </div>
+  </div>
+                                      <!-- Images -->
+                                      <div class="row lightbox-gallery">
+                                        <!-- a image -->
+                                        <div class="col-lg-12">
+                                            <div class="image bottom_60">
+                                                <img class="round-corners" src="img/works/Galaxy/Screens/New-Request-Low-Fidelity.png" alt="New Request Low Fidelity">
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <!-- Images -->
 
-<!-- Full Screen Image | Start  -->
-  <section class="galaxy-bg">
-    <h3 class="text subtitle white-text text-center bottom_120">Wireframes</h3>
-  <div class=""top_120" data-midnight="white" id="fullscreen-galaxy-wireframes"></div>
+                                                                          <!-- Images -->
+                                                                          <div class="row lightbox-gallery">
+                                                                            <!-- a image -->
+                                                                            <div class="col-lg-12">
+                                                                                <div class="image bottom_60">
+                                                                                    <img class="round-corners" src="img/works/Galaxy/Screens/Security-Ledger-Low-Fidelity.png" alt="Request Ledger">
+                                                                                </div>
+                                                                            </div>
+                                                                        </div>
+                                                                        <!-- Images -->
+  </div>
 </section>
-<!-- Full Screen Image | End  -->
+<!-- Three Columns - Text & Image | End  -->
+
+
+
 
 <section data-midnight="dark" class="lightgrey-bg purple-gradient-galaxy-bg">
-  <div class="project-detail bottom_30">
-    <h2 class="white-text title text-center">Final Product</h2>
+  <div class="row lightbox-gallery bottom_60">
+    <div class="image col-lg-2 offset-lg-5 col-md-2 offset-md-5">
+          <img src="img/works/Galaxy/Step 3.svg" alt="Step Three">
+    </div>
+</div>
+<div class="row">
+<div class="col-lg-12 bottom_120">
+     <h2 class="text text-center white-text title">Providing a killer UI/UX</h2>
+</div>
 </div>
   <div class="col-lg-10 offset-lg-1 col-md-10 offset-md-1 col-sm-8 offset-sm-2 top_60">
     <img class="image" src="img/works/Galaxy/Laptop-with-log-in.svg" alt="Log In">
@@ -273,12 +286,6 @@
           </div>
       </section>
       <!-- One Column - centered image | End  -->
-
-<section data-midnight="white" class="project-detail">
-  <div>
-    <h3 class="text subtitle text-center">Design System</h3>
-  </div>
-</section>
 <section data-midnight="dark" class="galaxy-bg-purple-gradient lightbox-gallery">
   <div class="col-lg-4 offset-lg-4 col-sm-4 offset-sm-4">
     <img src="img/works/Galaxy/GAL-AXY-LOGO.svg" alt="Logo">
@@ -325,7 +332,7 @@
 </section>
 <section data-midnight="dark" class="galaxy-bg-to-black">
 <div class="project-detail">
-  <h2 class="white-text title text-center bottom_120">Profile of a villain</h2>
+  <h2 class="white-text title text-center bottom_120">Looking for a villain?</h2>
 </div>
                   <!-- Images -->
                   <div class="row lightbox-gallery">
@@ -338,6 +345,22 @@
                 </div>
                 <!-- Images -->
 </section>
+
+<section data-midnight="dark" class="black-bg">
+                    <!-- Images -->
+                    <div class="row lightbox-gallery">
+                      <!-- a image -->
+                      <div class="col-lg-2 offset-lg-5">
+                        <div style="width:100%;height:0;padding-bottom:75%;position:relative;"><iframe src="https://giphy.com/embed/R7m04yMaGWVeE" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed round-corners" allowFullScreen></iframe>
+                      </div>
+                  </div>
+                  <!-- Images -->
+                  <div class="top_60 project-detail col-lg-12">
+                    <p class="text-center white-text">Thanks for scrolling this far...now you have to forget what you saw.</p>
+                  </div>
+  </section>
+
+
 
 
 
