--- a/Galaxy.html
+++ b/Galaxy.html
@@ -114,7 +114,7 @@
     </div>
   </div>
   <div class="col-lg-7 col-md-12">
-    <h2 class="title white-text">Why Agent J got the noisy criket?</h2>
+    <h2 class="title white-text">Why Agent J got the small gun?</h2>
     <p class="white-text">Short answer, bad user experience.  Thinking as a UX person I thought Agent J was not only a rookie being played. He was also at the mercy of a bad onboarding process. You see he walked in that room without having filed a proper request!.  So of course he was not aware of what was in store for him.  Lack of awareness, a very familiar problem in many companies around the galaxy.</p>
 </div> 
 </div>
@@ -222,7 +222,9 @@
 
 
 
-<section data-midnight="dark" class="lightgrey-bg purple-gradient-galaxy-bg">
+<section data-midnight="dark" class="purple-gradient-galaxy-bg">
+<div class="container project-detail">  
+  
   <div class="row lightbox-gallery bottom_60">
     <div class="image col-lg-2 offset-lg-5 col-md-2 offset-md-5">
           <img src="img/works/Galaxy/Step 3.svg" alt="Step Three">
@@ -233,9 +235,11 @@
      <h2 class="text text-center white-text title">Providing a killer UI/UX</h2>
 </div>
 </div>
-  <div class="col-lg-10 offset-lg-1 col-md-10 offset-md-1 col-sm-8 offset-sm-2 top_60">
+
+<div class="col-lg-10 offset-lg-1 col-md-10 offset-md-1 col-sm-8 offset-sm-2 top_60">
     <img class="image" src="img/works/Galaxy/Laptop-with-log-in.svg" alt="Log In">
   </div>
+</div>
 </section>
 
         <!-- One Column - centered image | Start  -->
@@ -350,7 +354,7 @@
                     <!-- Images -->
                     <div class="row lightbox-gallery">
                       <!-- a image -->
-                      <div class="col-lg-2 offset-lg-5">
+                      <div class="col-lg-4 offset-lg-4 col-md-4 offset-md-4 col-sm-4 offset-sm-4">
                         <div style="width:100%;height:0;padding-bottom:75%;position:relative;"><iframe src="https://giphy.com/embed/R7m04yMaGWVeE" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed round-corners" allowFullScreen></iframe>
                       </div>
                   </div>
