--- a/Biodiversity-Festival.html
+++ b/Biodiversity-Festival.html
@@ -223,9 +223,9 @@
 
 <section>
 <div class="col-lg-12 text-center">
-    <a class="next-link" href="Library-of-Congress.html">
+    <a class="next-link" href="Creating-Change.html">
         <div class="nav-title">Next Work</div>
-        <div class="next-title">Library of Congress</div>
+        <div class="next-title">Creating Change</div>
     </a>
 </div>
 </section>
