--- a/Creating-Change.html
+++ b/Creating-Change.html
@@ -191,9 +191,9 @@
 <!-- ======= Next Page / Start ========== -->
 <section>
 <div class="col-lg-12 text-center">
-    <a class="next-link" href="Biodiversity-Festival.html">
+    <a class="next-link" href="Storytelling-Bootcamp.html">
         <div class="nav-title">Next Work</div>
-        <div class="next-title">Biodiversity Festival</div>
+        <div class="next-title">Storytelling Bootcamp</div>
     </a>
 </div>
 </section>
