--- a/Library-of-Congress.html
+++ b/Library-of-Congress.html
@@ -191,9 +191,9 @@
         </section>
 <section>
       <div class="col-lg-12 text-center">
-          <a class="next-link" href="Gallo-Guapo.html">
+          <a class="next-link" href="Galaxy.html">
               <div class="nav-title">Next Work</div>
-              <div class="next-title">Gallo Guapo</div>
+              <div class="next-title">Galaxy</div>
           </a>
       </div>
 </section>
