--- a/Racing-Extinction.html
+++ b/Racing-Extinction.html
@@ -179,9 +179,9 @@
 
 <section>
             <div class="col-lg-12 text-center">
-                <a class="next-link" href="USA-Today.html">
+                <a class="next-link" href="Gallo-Guapo.html">
                     <div class="nav-title">Next Work</div>
-                    <div class="next-title">USA Today Brand Refresh</div>
+                    <div class="next-title">Gallo Guapo</div>
                 </a>
             </div>
 
