--- a/Storytelling-Bootcamp.html
+++ b/Storytelling-Bootcamp.html
@@ -174,9 +174,9 @@
         <!-- ======= Full Screen Image  / End ========== -->
   <!--footer-->
 <div class="col-lg-12 text-center top_90 bottom_60">
-    <a class="next-link" href="Library-of-Congress.html">
+    <a class="next-link" href="Racing-Extinction.html">
         <div class="nav-title">Next Work</div>
-        <div class="next-title">Library of Congress</div>
+        <div class="next-title">Racing Extinction</div>
     </a>
 </div>
 <footer data-midnight="dark">
