--- a/USA-Today.html
+++ b/USA-Today.html
@@ -302,9 +302,9 @@
         
         <section>
             <div class="col-lg-12 text-center">
-                <a class="next-link" href="Storytelling-Bootcamp.html">
+                <a class="next-link" href="Biodiversity-Festival.html">
                     <div class="nav-title">Next Work</div>
-                    <div class="next-title">Storytelling Bootcamp</div>
+                    <div class="next-title">Biodiversity Festival</div>
                 </a>
             </div>
         </section>
