--- a/Gallo-Guapo.html
+++ b/Gallo-Guapo.html
@@ -179,9 +179,9 @@
     
     <section>
     <div class="col-lg-12 text-center">
-    <a class="next-link" href="Gallo-Guapo.html">
+    <a class="next-link" href="Library-of-Congress.html">
         <div class="nav-title">Next Work</div>
-        <div class="next-title">Gallo Guapo</div>
+        <div class="next-title">Library of Congress</div>
     </a>
 </div>
     
